@@ -59,6 +59,7 @@ osd_lyrics_SOURCES = \
 	ol_player_xmms2.c \
 	ol_player_rhythmbox.c \
 	ol_player_qmmp.c \
+	ol_player_juk.c \
 	ol_player_moc.c \
 	ol_player_mpd.c \
 	ol_elapse_emulator.c \
